--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,4 @@
 
 
 
-
-<h1>Abhishek Dash</h1>
-
-
-<div class="text-primary-emphasis bg-primary-subtle border border-primary-subtle rounded-3">Checking bootstrap</div>
+<router-outlet></router-outlet>
